<resources>
    <string name="app_name">不忘</string>
    <string name="app_slogan">不想忘记的美好，一个都不忘。</string>

    <string name="login_page_login">登录</string>
    <string name="login_page_register">注册</string>

    <string name="login_page_user_name">账号(手机号)</string>
    <string name="login_page_passwd">密码</string>
    <string name="register_page_phone">手机号</string>
    <string name="register_verification_code">验证码</string>
    <string name="register_get_verification_code">获取验证码</string>
    <string name="register_phone_error">手机号码格式不合法</string>

    <string name="post_hint">忘了这个世界, 我也不会忘记你</string>

    <string name="add_book">新本砸</string>
    <string name="add_book_title">标题</string>
    <string name="add_book_description">简介 (Nice To Have)</string>
    <string name="add_book_is_private">设为私密</string>

    <string name="main_tag_books">记本</string>
    <string name="main_tag_timeline">日常</string>

    <string name="book_day_to_start_unit">Day</string>

    <string name="daliy_book_name_format">[%s]</string>

    <string name="setting_title">设置</string>

    <string name="daily_detail_title">详情</string>

    <string name="menu_share_tip">分享</string>
    <string name="menu_setting_tip">设置</string>
</resources>
