<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/color_424242"
            android:textSize="54dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="28dp"
            android:text="@string/app_slogan"
            android:textColor="@color/color_616161"
            android:textSize="16dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/default_focused_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color_white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_424242"
                android:textColorHint="@color/color_424242">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_424242"
                    android:hint="@string/register_page_phone"
                    android:imeActionLabel="@string/login_page_register"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_424242" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:gravity="center"
                android:text="@string/register_get_verification_code"
                android:textSize="14dp"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/color_424242"
            android:textColorHint="@color/color_424242">

            <EditText
                android:id="@+id/et_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_424242"
                android:hint="@string/register_verification_code"
                android:imeActionLabel="@string/login_page_register"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_424242" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/color_424242"
            android:textColorHint="@color/color_424242">

            <EditText
                android:id="@+id/et_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_424242"
                android:hint="@string/login_page_passwd"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_424242" />
        </com.google.android.material.textfield.TextInputLayout>


        <FrameLayout
            android:id="@+id/fl_register"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ripple_stroke_round_button"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_page_register"
                android:textSize="16dp" />
        </FrameLayout>

    </LinearLayout>

</FrameLayout>
